fix overflow

--- a/src/app.css
+++ b/src/app.css
@@ -64,3 +64,7 @@
 html {
 	font-size: 15px;
 }
+
+body {
+	overflow: hidden;
+}
